--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.React linguist-detectable=true
+*.react linguist-detectable=true
 *.js linguist-detectable=false
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
